--- a/static/index.html
+++ b/static/index.html
@@ -7,9 +7,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../static/style.css">
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -30,19 +28,10 @@
 </head>
 
 <body>
-    <!-- main header-->
-
     <header>
-        <div class="card">
-            <div class="card-body d-flex align-items-center justify-content-around">
-                <img src="https://i.postimg.cc/cJ77z03x/21932251.jpg" alt="logo-image" id="logo-image"
-                    style="height: 80px; width: 80px;">
-                <a href="#" style="height: 60px; width: 60px;"><i class="fas fa-shopping-basket"></i></a>
-            </div>
-        </div>
-
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light">
-            <a class="navbar-brand" href="index.html"><span class="font-weight-bold" id="logo-brand">Teddy Bear</span> </a>
+        <!-- Nav Bar start-->
+        <nav class="navbar navbar-expand-lg navbar-dark text-light px-5">
+            <a class="navbar-brand" href="index.html"><span class="font-weight-bold"> Teddy Bear</span> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -50,9 +39,10 @@
 
 
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html"><strong>Home</strong><span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html"><strong>Home</strong><span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><strong>Service</strong> </a>
@@ -61,19 +51,86 @@
                         <a class="nav-link " href="#"><strong>Contact Us</strong> </a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-danger bg-warning text-dark my-2 my-sm-0"
-                        type="submit">Search</button>
-                </form>
+                <i class="px-2 fas fa-shopping-basket fa-2x"></i>
             </div>
         </nav>
 
     </header>
-    <!-- main header ends-->
+    <!-- Nav Bar  ends-->
+    <!-- Slide Carousell start-->
+    <div id="carouselExampleCaptions" class="carousel slide text-center" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item carousel-image-1 active">
+                <div class="container">
+                    <img src="../images/teddy_5.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2> First Teddy Bear</h2>
+                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                        <button type="button" class="btn btn-color slide-btn btn-lg"> Sign Up</button>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item carousel-image-2">
+                <div class="container">
+                    <img src="../images/teddy_2.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Second Teddy Bear</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <button type="button" class="btn btn-color slide-btn btn-lg" href="">Learn More</button>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item carousel-image-3">
+                <div class="container">
+                    <img src="../images/teddy_3.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Third Teddy Bear</h2>
+                        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                        <button type="button" class="btn btn-color slide-btn btn-lg" href=""> Contact Us</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev text-dark" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon " aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next text-dark" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon " aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+    <!-- Slide Carousel ends-->
+    <!-- Info section -->
+    <section class="services py-5 text-center">
+        <div class="container-fluid jumbotron">
+            <div class="row">
+                <div class="col-10 mx-auto col-md-6 col-lg-4 my-3">
+                    <i class="fas fa-shipping-fast fa-2x"></i>
+                    <p>Free Shipping to all places</p>
+                </div>
+                <div class="col-10 mx-auto col-md-6 col-lg-4 my-3">
+                    <i class="fas fa-star fa-2x"></i>
+                    <p>Over 3000 satisfied customers</p>
+                </div>
+                <div class="col-10 mx-auto col-md-6 col-lg-4 my-3">
+                    <i class="fas fa-user-shield fa-2x"></i>
+                    <p>Security seal for your safetey</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Info section ends-->
 
     <!-- main content-->
-    <main class="container-fluid mt-5 mb-5">
+    <main class="container-fluid my-5">
         <section class="container">
             <div class="row align-items-center justify-content-around text-center">
                 <div class="col-sm-6 mt-3 ">
@@ -111,7 +168,8 @@
                 </div>
                 <div class="col-sm-6 mt-3">
                     <div class=" position-relative border rounded-lg" style="width: 300px; height: 300px;">
-                        <a href="page4.html"><img class="h-75 w-100 p-3 rounded-2" src="images/teddy_4.jpg" alt=""></a>
+                        <a href="page4.html"><img class="h-75 w-100 p-3 rounded-2" src="../images/teddy_4.jpg"
+                                alt=""></a>
                         <div>
                             <a class="text-center" href="">Price: $20</a>
                         </div>
