--- a/static/index.html
+++ b/static/index.html
@@ -3,23 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0  shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0  shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../static/style.css">
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ba1eae497d.js" crossorigin="anonymous"></script>
+
 
 
 
@@ -32,8 +26,7 @@
         <!-- Nav Bar start-->
         <nav class="navbar navbar-expand-lg navbar-dark text-light px-5">
             <a class="navbar-brand" href="index.html"><span class="font-weight-bold"> Teddy Bear</span> </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
-                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -51,133 +44,132 @@
                         <a class="nav-link " href="#"><strong>Contact Us</strong> </a>
                     </li>
                 </ul>
-                <i class="px-2 fas fa-shopping-basket fa-2x"></i>
+                <i class="px-5 fas fa-shopping-basket fa-2x"></i>
             </div>
         </nav>
 
     </header>
     <!-- Nav Bar  ends-->
-    <!-- Slide Carousell start-->
-    <div id="carouselExampleCaptions" class="carousel slide text-center" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    <!-- Main content-->
+    <main>
+        <!-- Slide Carousell start-->
+        <div id="carouselExampleCaptions" class="carousel slide text-center" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
 
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item carousel-image-1 active">
-                <div class="container">
-                    <img src="../images/teddy_5.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2> First Teddy Bear</h2>
-                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                        <button type="button" class="btn btn-color slide-btn btn-lg"> Sign Up</button>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item carousel-image-1 active">
+                    <div class="container">
+                        <img src="../images/teddy_1.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2> First Teddy Bear</h2>
+                            <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                            <button type="button" class="btn btn-color slide-btn btn-lg"> Sign Up</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item carousel-image-2">
+                    <div class="container">
+                        <img src="../images/teddy_2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Second Teddy Bear</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <button type="button" class="btn btn-color slide-btn btn-lg" href="">Learn More</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item carousel-image-3">
+                    <div class="container">
+                        <img src="../images/teddy_3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h2>Third Teddy Bear</h2>
+                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                            <button type="button" class="btn btn-color slide-btn btn-lg" href=""> Contact Us</button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="carousel-item carousel-image-2">
-                <div class="container">
-                    <img src="../images/teddy_2.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2>Second Teddy Bear</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <button type="button" class="btn btn-color slide-btn btn-lg" href="">Learn More</button>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item carousel-image-3">
-                <div class="container">
-                    <img src="../images/teddy_3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2>Third Teddy Bear</h2>
-                        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                        <button type="button" class="btn btn-color slide-btn btn-lg" href=""> Contact Us</button>
-                    </div>
-                </div>
-            </div>
+            <a class="carousel-control-prev text-dark" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon " aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next text-dark" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon " aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-        <a class="carousel-control-prev text-dark" href="#carouselExampleCaptions" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon " aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next text-dark" href="#carouselExampleCaptions" role="button" data-slide="next">
-            <span class="carousel-control-next-icon " aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
 
-    <!-- Slide Carousel ends-->
-    <!-- Info section -->
-    <section class="services py-5 text-center">
-        <div class="container-fluid jumbotron">
-            <div class="row">
-                <div class="col-10 mx-auto col-md-6 col-lg-4 my-3">
-                    <i class="fas fa-shipping-fast fa-2x"></i>
-                    <p>Free Shipping to all places</p>
-                </div>
-                <div class="col-10 mx-auto col-md-6 col-lg-4 my-3">
-                    <i class="fas fa-star fa-2x"></i>
-                    <p>Over 3000 satisfied customers</p>
-                </div>
-                <div class="col-10 mx-auto col-md-6 col-lg-4 my-3">
-                    <i class="fas fa-user-shield fa-2x"></i>
-                    <p>Security seal for your safetey</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Info section ends-->
-
-    <!-- main content-->
-    <main class="container-fluid my-5">
-        <section class="container">
-            <div class="row align-items-center justify-content-around text-center">
-                <div class="col-sm-6 mt-3 ">
-                    <div class="position-relative border rounded-lg" style="width: 300px; height: 300px;">
-                        <a href="page1.html"> <img class="h-75 w-100 p-3 rounded-2" src="../images/teddy_1.jpg"
-                                alt=""></a>
-                        <div>
-                            <a class="text-center" href="">Price: $20</a>
-                        </div>
+        <!-- Slide Carousel ends-->
+        <!-- Info section -->
+        <section class="services py-5 text-center">
+            <div class="container-fluid jumbotron">
+                <div class="row">
+                    <div class="col-10 mx-auto col-md-6 col-lg-4 my-3">
+                        <i class="fas fa-shipping-fast fa-2x"></i>
+                        <p>Free Shipping to all places</p>
                     </div>
-                </div>
-                <div class="col-sm-6 mt-3">
-                    <div class="position-relative border rounded-lg" style="width: 300px; height: 300px;">
-                        <a href="page2.html"><img class="h-75  w-100 p-3 rounded-lg" src="../images/teddy_2.jpg"
-                                alt=""></a>
-                        <div>
-                            <a class="text-center" href="">Price: $20</a>
-                        </div>
+                    <div class="col-10 mx-auto col-md-6 col-lg-4 my-3">
+                        <i class="fas fa-star fa-2x"></i>
+                        <p>Over 3000 satisfied customers</p>
                     </div>
-                </div>
-
-            </div>
-        </section>
-
-        <section class="container">
-            <div class="row align-items-center justify-content-around text-center">
-                <div class="col-sm-6 mt-3">
-                    <div class="position-relative border rounded-lg" style="width: 300px; height: 300px;">
-                        <a href="page3.html"><img class="h-75 w-100 p-3 rounded-2" src="../images/teddy_3.jpg"
-                                alt=""></a>
-                        <div>
-                            <a class="text-center" href="">Price: $20</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 mt-3">
-                    <div class=" position-relative border rounded-lg" style="width: 300px; height: 300px;">
-                        <a href="page4.html"><img class="h-75 w-100 p-3 rounded-2" src="../images/teddy_4.jpg"
-                                alt=""></a>
-                        <div>
-                            <a class="text-center" href="">Price: $20</a>
-                        </div>
+                    <div class="col-10 mx-auto col-md-6 col-lg-4 my-3">
+                        <i class="fas fa-user-shield fa-2x"></i>
+                        <p>Security seal for your safetey</p>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- Info section ends-->
 
+        <!-- product section-->
+
+        <section id="products" class="products py-5">
+            <div class="container">
+                <!--Section title-->
+                <div class="row">
+                    <div class="col-10 col-sm-6 mx-auto text-center ">
+                        <h1 class="text-capitalize product-title">
+                            Teddy Bear Products
+                        </h1>
+                    </div>
+                </div>
+                <!-- section title ends-->
+
+                <!-- Product items starts-->
+                <div class="row product-items" id="product-items">
+                    <!--Single item starts-->
+                    <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3" id="product-item">
+
+                    </div>
+                    <!--Single item end-->
+                    <!--Single item starts-->
+                    <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3" id="product-item">
+
+                    </div>
+                    <!--Single item end-->
+                    <!--Single item starts-->
+                    <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3" id="product-item">
+
+                    </div>
+                    <!--Single item end-->
+                    <!--Single item starts-->
+                    <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3" id="product-item">
+
+                    </div>
+                    <!--Single item end-->
+                    <!--Single item starts-->
+                    <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3" id="product-item">
+
+                    </div>
+                    <!--Single item end-->
+                </div>
+                <!-- Product items end -->
+            </div>
+        </section>
+        <!--Product section end-->
     </main>
     <!-- main content ends-->
 
@@ -196,6 +188,9 @@
     </footer>
 
     <!-- footer content ends-->
+    <!--JavaScript link starts-->
+    <script src="script.js"></script>
+    <!--JavaScript link ends-->
 </body>
 
 </html>
