--- a/static/page4.html
+++ b/static/page4.html
@@ -5,107 +5,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-        integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ba1eae497d.js" crossorigin="anonymous"></script>
+
     <title></title>
 </head>
 
 <body>
     <header>
-        <div class="card">
-            <div class="card-body d-flex align-items-center justify-content-between pl-5 pr-5">
-                <img src="https://i.postimg.cc/cJ77z03x/21932251.jpg" alt="logo-image" id="logo-image"
-                    style="height: 80px; width: 80px;">
-                <a href="#" style="height: 60px; width: 60px;"><i class="fas fa-shopping-basket"></i></a>
-            </div>
-        </div>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light pl-5">
-            <a class="navbar-brand" href="index.html"><span class="font-weight-bold" id="logo-brand">Teddy Bear</span> </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
-                aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-lg navbar-dark text-light px-5">
+            <a class="navbar-brand" href="index.html"><span class="font-weight-bold"> Teddy Bear</span> </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
 
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html"><strong>Home</strong><span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html"><strong>Home</strong><span
+                                class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="#"><strong>Service</strong> </a>
                     </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#"><strong>Contact Us</strong> </a>
+                    <li class="nav-item">
+                        <a class="nav-link " href="#"><strong>Contact Us</strong> </a>
                     </li>
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-danger bg-warning text-dark my-2 my-sm-0"
-                        type="submit">Search</button>
-                </form>
+                <i class="px-5 fas fa-shopping-basket fa-2x"></i>
             </div>
         </nav>
+
 
     </header>
     <!-- main header ends-->
 
     <!-- main content-->
-    <main class="container-fluid pt-5 pb-5">
-        <section class="container">
-            <div class=" row align-items-center justify-content-around text-center">
-                <div class="col-sm-6">
-                    <div class="position-relative border rounded-lg">
-                        <img class="img-fluid rounded-lg" src="../images/teddy_4.jpg" alt="" id="image">
-                        
-                            <div><strong>Price:</strong> $20 </div>
-                            <div class="form-group">
-                                <label for="exampleFormControlSelect1">Select Quantity</label>
-                                <select class="form-control-sm" id="exampleFormControlSelect1">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5</option>
-                                </select>
-                            </div>
-                            <button type="button" class="btn btn-outline-dark">Buy</button>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-    <!-- main content ends-->
+    <div class="row">
+        <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3" id="teddy-image">
 
-    <!-- footer content-->
-    <footer class="card bg-dark text-light" style="height: 100px;">
-        <div class="row card-body">
-            <div class="col-sm d-flex align-items-center justify-content-around">
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-pinterest-square"></i>
-            </div>
         </div>
+    </div>
 
-
-    </footer>
-
-    <!-- footer content ends-->
+    <!-- main content ends-->
+    <script src="script.js"></script>
 
 </body>
 
