adding script.js and item.js

--- a/static/index.html
+++ b/static/index.html
@@ -140,33 +140,8 @@
 
                 <!-- Product items starts-->
                 <div class="row product-items" id="product-items">
-                    <!--Single item starts-->
-                    <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3" id="product-item">
 
-                    </div>
-                    <!--Single item end-->
-                    <!--Single item starts-->
-                    <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3" id="product-item">
-
-                    </div>
-                    <!--Single item end-->
-                    <!--Single item starts-->
-                    <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3" id="product-item">
-
-                    </div>
-                    <!--Single item end-->
-                    <!--Single item starts-->
-                    <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3" id="product-item">
-
-                    </div>
-                    <!--Single item end-->
-                    <!--Single item starts-->
-                    <div class="col-10 col-sm-6 col-lg-4 mx-auto my-3" id="product-item">
-
-                    </div>
-                    <!--Single item end-->
                 </div>
-                <!-- Product items end -->
             </div>
         </section>
         <!--Product section end-->
@@ -174,13 +149,13 @@
     <!-- main content ends-->
 
     <!-- footer content-->
-    <footer class="card bg-dark text-light" style="height: 100px;">
-        <div class="row card-body ">
-            <div class="col-sm d-flex align-items-center justify-content-around ">
-                <i class="fab fa-facebook"></i>
-                <i class=" fab fa-instagram"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-pinterest-square"></i>
+    <footer class="container-fluid bg-dark text-light" style="height: 100px;">
+        <div class="row">
+            <div class="col-10 col-sm-6 d-flex align-items-start justify-content- mx-auto my-3">
+                <i class="mx-auto fab fa-facebook fa-2x"></i>
+                <i class=" mx-auto fab fa-instagram fa-2x"></i>
+                <i class="mx-auto fab fa-twitter fa-2x"></i>
+                <i class="mx-auto fab fa-pinterest-square fa-2x"></i>
             </div>
         </div>
 
