--- a/static/item.html
+++ b/static/item.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="full-height">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0  shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/style.css">
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -14,12 +14,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ba1eae497d.js" crossorigin="anonymous"></script>
 
-    <title></title>
+
+
+
+
+    <title>Teddy Bear Online shop </title>
 </head>
 
 <body>
     <header>
-
+        <!-- Nav Bar start-->
         <nav class="navbar navbar-expand-lg navbar-dark text-light px-5">
             <a class="navbar-brand" href="index.html"><span class="font-weight-bold"> Teddy Bear</span> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,20 +48,52 @@
             </div>
         </nav>
 
-
     </header>
-    <!-- main header ends-->
+    <!-- Nav Bar  ends-->
+    <!-- Main content-->
+    <main>
+        <!-- product section-->
 
-    <!-- main content-->
-    <div class="row">
-        <div class="col-10 col-sm-8 col-lg-4 mx-auto my-3" id="teddy-image">
+        <section id="products" class="products py-5">
+            <div class="container">
+                <!--Section title-->
+                <div class="row">
+                    <div class="col-10 col-sm-6 mx-auto text-center ">
+                        <h1 class="text-capitalize product-title">
 
-        </div>
-    </div>
+                        </h1>
+                    </div>
+                </div>
+                <!-- section title ends-->
 
+                <!-- Product items starts-->
+                <div class="row product-items d-flex justify-content-center align-items-center" id="product-items">
+
+                </div>
+            </div>
+        </section>
+        <!--Product section end-->
+    </main>
     <!-- main content ends-->
-    <script src="script.js"></script>
 
+    <!-- footer content-->
+    <footer class="container-fluid bg-dark text-light" style="height: 100px;">
+        <div class="row">
+            <div class="col-10 col-sm-6 d-flex align-items-center justify-content-around mx-auto my-3">
+                <i class="mx-auto fab fa-facebook fa-2x"></i>
+                <i class="mx-auto fab fa-instagram fa-2x"></i>
+                <i class="mx-auto fab fa-twitter fa-2x"></i>
+                <i class="mx-auto fab fa-pinterest-square fa-2x"></i>
+            </div>
+        </div>
+
+
+    </footer>
+
+    <!-- footer content ends-->
+    <!--JavaScript link starts-->
+    <script src="item-script.js"></script>
+    <!--JavaScript link ends-->
 </body>
 
 </html>
