add select option and buttion to single item

--- a/static/cart.html
+++ b/static/cart.html
@@ -18,7 +18,7 @@
 
 
 
-    <title>Teddy Bear Online shop </title>
+    <title> </title>
 </head>
 
 <body>
@@ -52,14 +52,27 @@
     <!-- Nav Bar  ends-->
     <!-- Main content-->
     <main>
-        <section id="product" class="container-fluid d-flex justify-content-around align-items-center py-5">
+        <!-- product section-->
 
-            <!-- Product items starts-->
-            <div class="row product-items" id="product-items">
+        <section id="products" class="products py-5">
+            <div class="container">
+                <!--Section title-->
+                <div class="row">
+                    <div class="col-10 col-sm-6 mx-auto text-center ">
+                        <h1 class="text-capitalize product-title">
 
-            </div>
+                        </h1>
+                    </div>
+                </div>
+                <!-- section title ends-->
+
+                <!-- Product items starts-->
+                <div class="row product-items d-flex justify-content-center align-items-center" id="product-items">
+
+                </div>
             </div>
         </section>
+        <!--Product section end-->
     </main>
     <!-- main content ends-->
 
