function for saving items in the local storage

--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="full-height">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -44,7 +44,6 @@
                         <a class="nav-link " href="#"><strong>Contact Us</strong> </a>
                     </li>
                 </ul>
-                <i class="px-5 fas fa-shopping-basket fa-2x"></i>
             </div>
         </nav>
 
@@ -126,7 +125,7 @@
 
         <!-- product section-->
 
-        <section id="products" class="products py-5">
+        <section id="products" class="products">
             <div class="container">
                 <!--Section title-->
                 <div class="row">
@@ -139,7 +138,7 @@
                 <!-- section title ends-->
 
                 <!-- Product items starts-->
-                <div class="row product-items" id="product-items">
+                <div class="row d-flex justify-content-around align-items-center" id="product-items">
 
                 </div>
             </div>
