--- a/static/item.html
+++ b/static/item.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="full-height">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -43,15 +43,18 @@
                     <li class="nav-item">
                         <a class="nav-link " href="#"><strong>Contact Us</strong> </a>
                     </li>
+                    <li>
+                        <a href="#" class="cart px-2 fas fa-shopping-basket fa-1 text-decoration-none">Cart   (<span class="fs-5">0</span>)</a>
+                    </li>
                 </ul>
-                <i class="px-5 fas fa-shopping-basket fa-2x"></i>
+
             </div>
         </nav>
 
     </header>
     <!-- Nav Bar  ends-->
     <!-- Main content-->
-    <main>
+    <main class="container-fluid main-container">
         <section id="product" class="container-fluid d-flex justify-content-around align-items-center py-5">
 
             <!-- Product items starts-->
@@ -73,8 +76,6 @@
                 <i class="mx-auto fab fa-pinterest-square fa-2x"></i>
             </div>
         </div>
-
-
     </footer>
 
     <!-- footer content ends-->
