--- a/static/cart.html
+++ b/static/cart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="full-height">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -92,7 +92,7 @@
 
     <!-- footer content ends-->
     <!--JavaScript link starts-->
-    <script src="item-script.js"></script>
+    <script src="cart.js"></script>
     <!--JavaScript link ends-->
 </body>
 
