changing file names

--- a/static/cart.html
+++ b/static/cart.html
@@ -18,6 +18,7 @@
 
 
 
+
     <title> </title>
 </head>
 
@@ -43,8 +44,14 @@
                     <li class="nav-item">
                         <a class="nav-link " href="#"><strong>Contact Us</strong> </a>
                     </li>
+                    <li>
+                        <a href="">
+                            <i class="px-5 fas fa-shopping-basket fa-2x"></i>
+                        </a>
+
+                    </li>
                 </ul>
-                <i class="px-5 fas fa-shopping-basket fa-2x"></i>
+
             </div>
         </nav>
 
@@ -56,18 +63,7 @@
 
         <section id="products" class="products py-5">
             <div class="container">
-                <!--Section title-->
-                <div class="row">
-                    <div class="col-10 col-sm-6 mx-auto text-center ">
-                        <h1 class="text-capitalize product-title">
-
-                        </h1>
-                    </div>
-                </div>
-                <!-- section title ends-->
-
-                <!-- Product items starts-->
-                <div class="row product-items d-flex justify-content-center align-items-center" id="product-items">
+                <div class="row product-items" id="product-items">
 
                 </div>
             </div>
@@ -92,7 +88,7 @@
 
     <!-- footer content ends-->
     <!--JavaScript link starts-->
-    <script src="cart.js"></script>
+    <script src="cart-items.js"></script>
     <!--JavaScript link ends-->
 </body>
 
