--- a/static/index.html
+++ b/static/index.html
@@ -16,8 +16,6 @@
 
 
 
-
-
     <title>Teddy Bear Online shop </title>
 </head>
 
@@ -42,6 +40,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="#"><strong>Contact Us</strong> </a>
+                    </li>
+                    <li>
+                        <a href="#" class="cart px-2 fas fa-shopping-basket fa-1 text-decoration-none">Cart (<span id="cart-number"class="fs-5"></span>)</a>
                     </li>
                 </ul>
             </div>
@@ -163,7 +164,10 @@
 
     <!-- footer content ends-->
     <!--JavaScript link starts-->
+
     <script src="script.js"></script>
+
+
     <!--JavaScript link ends-->
 </body>
 
