--- a/static/product.html
+++ b/static/product.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/ba1eae497d.js" crossorigin="anonymous"></script>
-    <script src="cart.js"></script>
+
 
 
 
@@ -21,8 +21,9 @@
 
     <title>Teddy Bear Online shop </title>
 </head>
+<!---->
 
-<body onload="updateCartCounter()">
+<body>
     <header>
         <!-- Nav Bar start-->
         <nav class="navbar navbar-expand-lg navbar-dark text-light px-5">
@@ -45,7 +46,7 @@
                         <a class="nav-link " href="#"><strong>Contact Us</strong> </a>
                     </li>
                     <li>
-                        <a href="#" class="cart px-2 fas fa-shopping-basket fa-1 text-decoration-none">Cart (<span class="fs-5">0</span>)</a>
+                        <a href="cart.html" class="cart px-2 fas fa-shopping-basket fa-1 text-decoration-none">Cart (<span class="fs-5" id="cart-number"></span>)</a>
                     </li>
                 </ul>
 
@@ -81,7 +82,10 @@
 
     <!-- footer content ends-->
     <!--JavaScript link starts-->
-    <script src="item-script.js"></script>
+    <script src="product.js"></script>
+
+
+
 
     <!--JavaScript link ends-->
 </body>
