--- a/static/index.html
+++ b/static/index.html
@@ -42,7 +42,7 @@
                         <a class="nav-link " href="#"><strong>Contact Us</strong> </a>
                     </li>
                     <li>
-                        <a href="#" class="cart px-2 fas fa-shopping-basket fa-1 text-decoration-none">Cart (<span id="cart-number"class="fs-5"></span>)</a>
+                        <a href="cart.html" class="cart px-2 fas fa-shopping-basket fa-1 text-decoration-none"> Cart: <span id="cart-number"class="fs-5"> </span></a>
                     </li>
                 </ul>
             </div>
@@ -166,6 +166,7 @@
     <!--JavaScript link starts-->
 
     <script src="script.js"></script>
+    <script src="global-cart-script.js"></script>
 
 
     <!--JavaScript link ends-->
