--- a/static/product.html
+++ b/static/product.html
@@ -46,7 +46,7 @@
                         <a class="nav-link " href="#"><strong>Contact Us</strong> </a>
                     </li>
                     <li>
-                        <a href="cart.html" class="cart px-2 fas fa-shopping-basket fa-1 text-decoration-none">Cart (<span class="fs-5" id="cart-number"></span>)</a>
+                        <a href="cart.html" class="cart px-2 fas fa-shopping-basket fa-1 text-decoration-none">Cart: <span class="fs-5" id="cart-number"></span></a>
                     </li>
                 </ul>
 
@@ -83,6 +83,7 @@
     <!-- footer content ends-->
     <!--JavaScript link starts-->
     <script src="product.js"></script>
+    <script src="global-cart-script.js"></script>
 
 
 
