--- a/static/index.html
+++ b/static/index.html
@@ -31,18 +31,12 @@
 
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html"><strong>Home</strong><span
-                                class="sr-only">(current)</span></a>
+                    <li class="nav-item active" id="home">
+                        <a class="nav-link me-5" href="index.html"><strong >Home</strong><span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><strong>Service</strong> </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#"><strong>Contact Us</strong> </a>
-                    </li>
+
                     <li>
-                        <a href="cart.html" class="cart px-2 fas fa-shopping-basket fa-1 text-decoration-none"> Cart: <span id="cart-number"class="fs-5"> </span></a>
+                        <a href="cart.html" class="cart  pt-2 fas fa-shopping-basket fa-1 text-decoration-none"> Cart: <span id="cart-number"class="fs-5"> </span></a>
                     </li>
                 </ul>
             </div>
@@ -126,36 +120,39 @@
 
         <!-- product section-->
 
-        <section id="products" class="products">
+        <section>
             <div class="container">
                 <!--Section title-->
-                <div class="row">
-                    <div class="col-10 col-sm-6 mx-auto text-center ">
-                        <h1 class="text-capitalize product-title">
-                            Teddy Bear Products
-                        </h1>
-                    </div>
-                </div>
-                <!-- section title ends-->
 
-                <!-- Product items starts-->
-                <div class="row d-flex justify-content-around align-items-center" id="product-items">
-
+                <div class="col-md-4 mx-auto text-center ">
+                    <h1 class="text-capitalize product-title">
+                        Teddy Bear Products
+                    </h1>
                 </div>
             </div>
+        </section>
+        <!-- section title ends-->
+
+        <!-- Product section starts-->
+        <section class="container-fluid ">
+
+            <div class="row" id="product-items">
+
+            </div>
+
         </section>
         <!--Product section end-->
     </main>
     <!-- main content ends-->
 
     <!-- footer content-->
-    <footer class="container-fluid bg-dark text-light" style="height: 100px;">
-        <div class="row">
-            <div class="col-10 col-sm-6 d-flex align-items-start justify-content- mx-auto my-3">
-                <i class="mx-auto fab fa-facebook fa-2x"></i>
-                <i class=" mx-auto fab fa-instagram fa-2x"></i>
-                <i class="mx-auto fab fa-twitter fa-2x"></i>
-                <i class="mx-auto fab fa-pinterest-square fa-2x"></i>
+    <footer class="container-fluid bg-dark text-light " style="height: 100px; ">
+        <div class="row ">
+            <div class="col-10 col-sm-6 d-flex align-items-start justify-content- mx-auto my-3 ">
+                <i class="mx-auto fab fa-facebook fa-2x "></i>
+                <i class=" mx-auto fab fa-instagram fa-2x "></i>
+                <i class="mx-auto fab fa-twitter fa-2x "></i>
+                <i class="mx-auto fab fa-pinterest-square fa-2x "></i>
             </div>
         </div>
 
@@ -165,8 +162,8 @@
     <!-- footer content ends-->
     <!--JavaScript link starts-->
 
-    <script src="script.js"></script>
-    <script src="global-cart-script.js"></script>
+    <script src="script.js "></script>
+    <script src="global-cart-script.js "></script>
 
 
     <!--JavaScript link ends-->
