--- a/static/product.html
+++ b/static/product.html
@@ -35,18 +35,13 @@
 
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
+                    <li class="nav-item active" id="home">
                         <a class="nav-link" href="index.html"><strong>Home</strong><span
                                 class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><strong>Service</strong> </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#"><strong>Contact Us</strong> </a>
-                    </li>
+
                     <li>
-                        <a href="cart.html" class="cart px-2 fas fa-shopping-basket fa-1 text-decoration-none">Cart: <span class="fs-5" id="cart-number"></span></a>
+                        <a href="cart.html" class="cart pe-5 pt-2 fas fa-shopping-basket fa-1 text-decoration-none">Cart: <span class="fs-5" id="cart-number"></span></a>
                     </li>
                 </ul>
 
@@ -56,14 +51,10 @@
     </header>
     <!-- Nav Bar  ends-->
     <!-- Main content-->
-    <main class="container-fluid main-container">
-        <section id="product" class="container-fluid d-flex justify-content-around align-items-center py-5">
+    <main class="container">
+        <section id="product-items" class="container d-flex justify-content-around align-items-center py-5">
 
-            <!-- Product items starts-->
-            <div class="row product-items" id="product-items">
 
-            </div>
-            </div>
         </section>
     </main>
     <!-- main content ends-->
